# JpegTranscoder

./: .gitignore  CMakeLists.txt  README.md
arithmetic_coding/: arithmetic_decoder.cpp  arithmetic_decoder.h  arithmetic_encoder.cpp  arithmetic_encoder.h  consts.h  main.cpp
huffman/: .gitignore  CMakeLists.txt  README.md  bit_vector.cpp  bit_vector.h  huffman_tree.cpp  huffman_tree.h  main.cpp  ngram.cpp  ngram.h  preprocess.cpp  report.csv  test.txt  utils.cpp  utils.h
huffman/decoder/: decoder.cpp  decoder.h  decoder_main.cpp
huffman/encoder/: encoder.cpp  encoder.h  encoder_main.cpp
simple-jpeg-decoder/include/: Decoder.hpp  HuffmanTree.hpp  MCU.hpp  Utility.hpp
simple-jpeg-decoder/src/: Decoder.cpp  HuffmanTree.cpp  Image.cpp  MCU.cpp  Utility.cpp
transcoder/: test.cpp  transcoder_utils.cpp  transcoder_utils.h
transcoder/decoder/: main.cpp  trans_decoder.cpp  trans_decoder.h
transcoder/encoder/: main.cpp  trans_encoder.cpp  trans_encoder.h
